prevents badge from wrapping

--- a/muckrock/assets/scss/component/_badge.scss
+++ b/muckrock/assets/scss/component/_badge.scss
@@ -7,6 +7,7 @@
     font-size: $font-size-2;
     font-weight: $font-weight-bold;
     line-height: $font-line-height;
+    white-space: nowrap;
 }
 
 .red.badge, .failure.badge, .inactive.badge {
